	* qrspe.[ch], qrencode.c, tests/test_qrspec.c:
	  - QRspec_getEccSpec() now accepts an int array instead to return multiple
	    values instead of returning dynamic allocated array.
	* mask.c, rscode.c:
	  - More return value checks from malloc().
	* configure.ac:
	  - Added "--enable-mudflap" option.
	* rscode.[ch]:
	  - Added free_rs_cache() for debug purpose.

2009.05.12 Kentaro FUKUCHI <fukuchi@megaui.net>
	* bitstream.c:
	  - BitStream_toByte() had returned non-NULL for an empty BitStream.
	* tests/test_bitstream.c:
	  - test_null() has been added.
	* qrinput.c:
	  - A possible memory leak has been eliminated. It happend when a wrong
	    version number was given.
	* tests/test_qriput.c:
	  - Memory leaks have been eliminated.

2009.05.01 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Bumped vertion to 3.1.0.

2009.04.30 Kentaro FUKUCHI <fukuchi@megaui.net>
	* bistream.[ch]:
	  - Internal representation of BitStream has been changed from
	    NUL-terminated to unsigned char array.
	* tests/common.h, tests/test_{bitstream,qrinput}.c:
	  - Some test sequences have been updated (see above).

2009.03.25 Kentaro FUKUCHI <fukuchi@megaui.net>
	* configure.ac:
	  - "--without-tests" has become default setting.
	* bitstream.[ch]:
	  - Now functions strictly check return value from malloc() and return
	    error if it fails.

2008.10.31 Kentaro FUKUCHI <fukuchi@megaui.net>
	* tests/commo.h:
	  - __FUNCTION__ has been replaced with __func__, to follow the C99
	    standard.
	  - The way of variadic macros has been changed, to follow the C99
	    standard.

2008.10.11 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode_inner.h:
	  - Now this header is called only by test programs.
	* qrencode.c, qrencode_inner.h:
	  - Some definitions and declares written in qrencode_inner.h have been
	    moved into qrencode.c:
	  - QRraw_*() have been declared as __STATIC.
	* mask.[ch], qrencode.c, qrencode_inner.h:
	  - Mask_makeMask() now requires QRecLevel.