@@ -4,6 +4,7 @@
 #include "../qrinput.h"
 #include "../split.h"
 #include "../qrspec.h"
+#include "../rscode.h"
 
 #define MAX_LENGTH 7091
 static char data[MAX_LENGTH];
@@ -269,6 +270,7 @@ int main(int argc, char **argv)
 	monkey_split_structure(loop);
 
 	QRspec_clearCache();
+	free_rs_cache();
 
 	report();
 
